# Codex

./: .gitignore  CHANGELOG.md  Porcelain.cabal
app/: Lexer.hs  Main.hs  Parser.hs
as/: test.as
asm/: test
docs/: grammar.md
haskell/: Lexer.hi  Lexer.hs  Main.hi  Main.hs  NewParser.hs  Parser.hi  Parser.hs  main.hs
pascal/: arr.pas  reserved_words.pas  test.pas  test1.pas
