cabal-version:      3.0
name:               Porcelain
version:            0.1.0.0
synopsis:           A transpiler for ActionScript 3.0
-- description:
homepage:           https://blog.awain.net
license:            Apache-2.0
license-file:       LICENSE
author:             alterdekim
maintainer:         alterwain@protonmail.com
-- copyright:
category:           Language
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable Porcelain
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.17.2.1
    hs-source-dirs:   app
    default-language: Haskell2010
